Added Logstash + Kibana (Application has full ELK stack)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,9 +27,9 @@ services:
       REDIS_HOST: localhost
       REDIS_PORT: 6379
       REDIS_PASSWORD: ${PASSWORD}
-    command: redis-server --save 20 1 --loglevel warning --requirepass ${PASSWORD}
     volumes:
       - cache:/data
+    command: redis-server --save 20 1 --loglevel warning --requirepass ${PASSWORD}
   elasticsearch:
     image: elasticsearch:8.8.0
     restart: always
@@ -43,6 +43,35 @@ services:
       ES_JAVA_OPTS: "-Xms512m -Xmx512m"
     networks:
       - elastic
+  logstash:
+    image: logstash:8.8.0
+    restart: always
+    container_name: test-logstash
+    depends_on:
+      - elasticsearch
+    ports:
+      - "5000:5000/tcp"
+      - "5000:5000/udp"
+      - "5044:5044"
+      - "9600:9600"
+    environment:
+      discovery.seed_hosts: logstash
+      LS_JAVA_OPTS: "-Xms512m -Xmx512m"
+    volumes:
+      - ./src/main/resources/logstash.conf:/logstash/conf.d/logstash.conf:ro
+    networks:
+      - elastic
+    command: logstash -f /logstash/conf.d/logstash.conf
+  kibana:
+    image: kibana:8.8.0
+    restart: always
+    container_name: test-kibana
+    depends_on:
+      - elasticsearch
+    ports:
+      - "5601:5601"
+    networks:
+      - elastic
   app:
     build:
       context: .
@@ -51,5 +80,7 @@ services:
       - postgresql
       - redis
       - elasticsearch
+      - logstash
+      - kibana
     environment:
       SPRING_PROFILES_ACTIVE: ${ACTIVE_PROFILE}
