--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -21,6 +21,10 @@ spring:
         enabled: true
   liquibase:
     change-log: classpath:/db/changelog/changelog-master.yaml
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
   boot:
     admin:
       client:
