--- a/src/main/resources/db/changelog/changelog_create_user.yaml
+++ b/src/main/resources/db/changelog/changelog_create_user.yaml
@@ -29,3 +29,12 @@ databaseChangeLog:
                   constraints:
                     nullable: false
                     unique: true
+              - column:
+                  name: role
+                  type: varchar(16)
+                  constraints:
+                    nullable: false
+        - addDefaultValue:
+            tableName: users
+            columnName: role
+            defaultValue: DEFAULT
