--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ volumes:
     driver: local
 
 networks:
-  elastic:
+  backend:
     driver: bridge
 
 services:
@@ -16,7 +16,8 @@ services:
     environment:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+    networks:
+      - backend
   redis:
     image: redis:latest
     restart: always
@@ -29,6 +30,8 @@ services:
       REDIS_PASSWORD: ${PASSWORD}
     volumes:
       - cache:/data
+    networks:
+      - backend
     command: redis-server --save 20 1 --loglevel warning --requirepass ${PASSWORD}
   elasticsearch:
     image: elasticsearch:8.8.0
@@ -42,13 +45,14 @@ services:
       discovery.type: single-node
       ES_JAVA_OPTS: "-Xms512m -Xmx512m"
     networks:
-      - elastic
+      - backend
   logstash:
     image: logstash:8.8.0
     restart: always
     container_name: test-logstash
     depends_on:
-      - elasticsearch
+      elasticsearch:
+        condition: "service_started"
     ports:
       - "5000:5000/tcp"
       - "5000:5000/udp"
@@ -58,20 +62,21 @@ services:
       discovery.seed_hosts: logstash
       LS_JAVA_OPTS: "-Xms512m -Xmx512m"
     volumes:
-      - ./src/main/resources/logstash.conf:/logstash/conf.d/logstash.conf:ro
+      - ./src/main/resources/logstash.conf:/etc/logstash/conf.d/logstash.conf:ro
     networks:
-      - elastic
-    command: logstash -f /logstash/conf.d/logstash.conf
+      - backend
+    command: logstash -f /etc/logstash/conf.d/logstash.conf
   kibana:
     image: kibana:8.8.0
     restart: always
     container_name: test-kibana
     depends_on:
-      - elasticsearch
+      elasticsearch:
+        condition: "service_started"
     ports:
       - "5601:5601"
     networks:
-      - elastic
+      - backend
   app:
     build:
       context: .
@@ -84,3 +89,9 @@ services:
       - kibana
     environment:
       SPRING_PROFILES_ACTIVE: ${ACTIVE_PROFILE}
+      SPRING_DATASOURCE_URL: ${DB_URL}
+      SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${PASSWORD}
+      SPRING_JPA_HIBERNATE_DDL_AUTO: create
+    networks:
+      - backend
