--- a/src/main/resources/logstash.conf
+++ b/src/main/resources/logstash.conf
@@ -1,6 +1,6 @@
 input {
     file {
-        path => "./logs/latest.log"
+        path => "D:\JavaProjects\resume\test-service\src\main\resources\logs\latest.log"
         start_position => "beginning"
     }
 }
