--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -9,6 +9,7 @@ spring:
     username: ${DB_USERNAME}
     password: ${PASSWORD}
     url: ${DB_URL}
+    name: ${DB_NAME}
   jpa:
     hibernate:
       ddl-auto: create
@@ -22,6 +23,12 @@ spring:
     hiddenmethod:
       filter:
         enabled: true
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${KEYCLOAK_URL}/realms/${KEYCLOAK_REALM_NAME}
+          jwk-set-uri: ${KEYCLOAK_URL}/realms/${KEYCLOAK_REALM_NAME}/protocol/openid-connect/certs
   boot:
     admin:
       client:
