--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,3 +1,4 @@
+
 spring:
   cache:
     type: redis
@@ -28,7 +29,7 @@ spring:
       api-key: ${OPEN_API_KEY}
       chat:
         options:
-          model: gpt-3.5-turbo
+          model: gpt-4o
   #  security:
 #    oauth2:
 #      resourceserver:
@@ -48,3 +49,5 @@ management:
   endpoint:
     health:
       show-details: always
+springdoc:
+  show-actuator: true
