--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 volumes:
   cache:
     driver: local
+  prom_data:
 
 networks:
   backend:
@@ -56,15 +57,15 @@ services:
       elasticsearch:
         condition: "service_started"
     ports:
-      - "5000:5000/tcp"
-      - "5000:5000/udp"
-      - "5044:5044"
-      - "9600:9600"
+      - '5000:5000/tcp'
+      - '5000:5000/udp'
+      - '5044:5044'
+      - '9600:9600'
     environment:
       discovery.seed_hosts: logstash
       LS_JAVA_OPTS: "-Xms512m -Xmx512m"
     volumes:
-      - ./src/main/resources/logstash.conf:/etc/logstash/conf.d/logstash.conf:ro
+      - ./src/main/resources/logstash/logstash.conf:/etc/logstash/conf.d/logstash.conf:ro
     networks:
       - backend
     command: logstash -f /etc/logstash/conf.d/logstash.conf
@@ -76,7 +77,7 @@ services:
       elasticsearch:
         condition: "service_started"
     ports:
-      - "5601:5601"
+      - '5601:5601'
     networks:
       - backend
   keycloak:
@@ -87,7 +88,7 @@ services:
       mysql:
         condition: service_started
     ports:
-      - "8282:8080"
+      - '8282:8080'
     environment:
       KC_DB: mysql
       KC_DB_PASSWORD: ${PASSWORD}
@@ -99,11 +100,32 @@ services:
       KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_PASSWORD}
     command: start-dev
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://0.0.0.0:8080/realms/master" ]
+      test: ["CMD", "curl", "-f", "http://0.0.0.0:8080/realms/master"]
       start_period: 10s
       interval: 30s
       retries: 3
       timeout: 5s
+  prometheus:
+    image: prom/prometheus
+    restart: always
+    container_name: test-prometheus
+    ports:
+      - '9090:9090'
+    volumes:
+      - ./src/main/resources/prometheus:/etc/prometheus
+      - prom_data:/prometheus
+    command: --config.file=/etc/prometheus/prometheus.yaml
+  grafana:
+    image: grafana/grafana
+    restart: always
+    container_name: test-grafana
+    ports:
+      - '3000:3000'
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
+    volumes:
+      - ./src/main/resources/grafana:/etc/grafana/provisioning/datasources
   app:
     build:
       context: .
@@ -115,6 +137,8 @@ services:
       - logstash
       - kibana
       - keycloak
+      - prometheus
+      - grafana
     environment:
       SPRING_PROFILES_ACTIVE: ${ACTIVE_PROFILE}
       SPRING_DATASOURCE_URL: ${DB_URL}/${DB_NAME}
